[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/entity/onvi2.png" type="Texture" id=2]
[ext_resource path="res://assets/entity/light.png" type="Texture" id=3]
[ext_resource path="res://assets/Fondo_Granja.png" type="Texture" id=4]
[ext_resource path="res://script/AnimalRigid.gd" type="Script" id=5]
[ext_resource path="res://assets/abducirfinal.png" type="Texture" id=6]
[ext_resource path="res://scenes/virtual_joystick.tscn" type="PackedScene" id=7]
[ext_resource path="res://script/HammerLevel.gd" type="Script" id=9]
[ext_resource path="res://assets/Arcane Nine.otf" type="DynamicFontData" id=11]
[ext_resource path="res://script/TouchAbduction.gd" type="Script" id=12]
[ext_resource path="res://script/Ufo.gd" type="Script" id=13]
[ext_resource path="res://script/Light.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=9]
size = 61
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 665.5, 13 )

[sub_resource type="PhysicsMaterial" id=14]
bounce = 0.91

[sub_resource type="CircleShape2D" id=15]
radius = 44.0454

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 14.5, 371 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 21, 368.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4.72681, 235.991 )

[node name="UfoLevel1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -713.0
texture = ExtResource( 4 )
expand = true

[node name="CountDown" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -41.0
margin_right = 6.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1

[node name="StaticFloor" type="StaticBody2D" parent="."]

[node name="AreaFloor" type="Area2D" parent="StaticFloor"]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticFloor/AreaFloor"]
position = Vector2( 697.5, 747 )
scale = Vector2( 1.05, 1 )
shape = SubResource( 13 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticFloor"]
position = Vector2( 697.5, 747 )
scale = Vector2( 1.05, 1 )
shape = SubResource( 13 )

[node name="ControlTouchAbduction" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1400.0
margin_top = -800.0

[node name="TouchAbduction" type="TouchScreenButton" parent="ControlTouchAbduction"]
position = Vector2( 1222, 533 )
scale = Vector2( 0.747619, 1.01429 )
normal = ExtResource( 6 )
action = "abduction"
script = ExtResource( 12 )

[node name="Cow" type="RigidBody2D" parent="."]
position = Vector2( 616, 472 )
collision_layer = 8
physics_material_override = SubResource( 14 )
script = ExtResource( 5 )
texture = "res://assets/kenney_animalpackredux/PNG/Round (outline)/cow.png"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cow"]
shape = SubResource( 15 )

[node name="Body" type="Sprite" parent="Cow"]
scale = Vector2( 0.6, 0.6 )

[node name="AreaLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaLeft"]
position = Vector2( 438.5, 361 )
shape = SubResource( 16 )

[node name="AreaRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRight"]
position = Vector2( 1003, 358.5 )
shape = SubResource( 17 )

[node name="Ufo" type="Node2D" parent="."]

[node name="Ship" type="Sprite" parent="Ufo"]
position = Vector2( 813, 133 )
scale = Vector2( 0.6, 0.7 )
texture = ExtResource( 2 )
script = ExtResource( 13 )

[node name="Light" type="Sprite" parent="Ufo/Ship"]
position = Vector2( -0.208862, 69.221 )
scale = Vector2( 0.705197, 7.22625e-06 )
texture = ExtResource( 3 )
script = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="Ufo/Ship/Light"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ufo/Ship/Light/Area2D"]
position = Vector2( -2.06702, -0.642365 )
scale = Vector2( 1, 1 )
shape = SubResource( 7 )

[node name="TimerAbduct" type="Timer" parent="Ufo/Ship/Light"]
wait_time = 4.0
one_shot = true

[node name="TimerReturnLight" type="Timer" parent="Ufo/Ship/Light"]
wait_time = 2.0
one_shot = true

[node name="UfoResponsive" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -700.0
margin_right = 700.0
margin_bottom = 800.0

[node name="TransitionFinish" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = 5.0
color = Color( 0, 0, 0, 0 )

[node name="UI" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control2" type="Control" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -800.0
margin_right = 1400.0

[node name="TimerCountDown" type="Timer" parent="."]
autostart = true

[node name="TimerStart" type="Timer" parent="."]
wait_time = 2.79
one_shot = true
autostart = true

[node name="TimerGo" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TimerTimeGame" type="Timer" parent="."]
wait_time = 1e+07
one_shot = true

[node name="TimerFail" type="Timer" parent="."]
wait_time = 4.2

[node name="TimerWinnerOne" type="Timer" parent="."]
wait_time = 3.88

[node name="TimerWinnerTwo" type="Timer" parent="."]
wait_time = 3.88

[node name="TimerWinnerThree" type="Timer" parent="."]
wait_time = 3.88

[node name="SFX" type="AudioStreamPlayer2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Glitch" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.160784, 0.0627451, 0.0627451, 0 )

[node name="Virtual joystick" parent="." instance=ExtResource( 7 )]

[connection signal="body_entered" from="StaticFloor/AreaFloor" to="Cow" method="_on_AreaFloor_body_entered"]
[connection signal="pressed" from="ControlTouchAbduction/TouchAbduction" to="ControlTouchAbduction/TouchAbduction" method="_on_TouchAbduction_pressed"]
[connection signal="body_entered" from="AreaLeft" to="Cow" method="_on_AreaLeft_body_entered"]
[connection signal="body_entered" from="AreaRight" to="Cow" method="_on_AreaRight_body_entered"]
[connection signal="body_entered" from="Ufo/Ship/Light/Area2D" to="Ufo/Ship/Light" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Ufo/Ship/Light/TimerAbduct" to="ControlTouchAbduction/TouchAbduction" method="_on_TimerAbduct_timeout"]
[connection signal="timeout" from="Ufo/Ship/Light/TimerReturnLight" to="ControlTouchAbduction/TouchAbduction" method="_on_TimerReturnLight_timeout"]
[connection signal="timeout" from="TimerCountDown" to="." method="_on_TimerCountDown_timeout"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
[connection signal="timeout" from="TimerGo" to="." method="_on_TimerGo_timeout"]
[connection signal="timeout" from="TimerTimeGame" to="." method="_on_TimerTimeGame_timeout"]
[connection signal="timeout" from="TimerFail" to="." method="_on_TimerFail_timeout"]
[connection signal="timeout" from="TimerWinnerOne" to="." method="_on_TimerWinnerOne_timeout"]
[connection signal="timeout" from="TimerWinnerTwo" to="." method="_on_TimerWinnerTwo_timeout"]
[connection signal="timeout" from="TimerWinnerThree" to="." method="_on_TimerWinnerThree_timeout"]
