[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://script/AnimalRigid.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 71, 282.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 65.5, 276.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1750.13, 55.5 )

[sub_resource type="PhysicsMaterial" id=3]
bounce = 0.91

[sub_resource type="CircleShape2D" id=2]
radius = 44.0454

[node name="AnimalRigido" type="Node2D"]

[node name="AreaLeft" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaLeft"]
position = Vector2( 269, 272.5 )
shape = SubResource( 4 )

[node name="AreaRight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRight"]
position = Vector2( 1147.5, 276.5 )
shape = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="AreaFloor" type="Area2D" parent="StaticBody2D"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/AreaFloor"]
position = Vector2( 698, 611 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -352.875, 611 )
shape = SubResource( 1 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2( 616, 472 )
collision_layer = 8
physics_material_override = SubResource( 3 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="RigidBody2D"]
texture = ExtResource( 1 )

[connection signal="body_entered" from="AreaLeft" to="RigidBody2D" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="AreaRight" to="RigidBody2D" method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="StaticBody2D/AreaFloor" to="RigidBody2D" method="_on_AreaFloor_body_entered"]
